BTWCT-922: IE11 Alignment fixed

--- a/waters-aem-frontend/src/styles/externalfooter.scss
+++ b/waters-aem-frontend/src/styles/externalfooter.scss
@@ -314,6 +314,11 @@
 .cmp-footer__selector {
     margin-left: $space-s;
     width: fit-content;
+    position: relative;
+
+    @supports (display: inline-grid) {
+        position: static;
+    }
 
     @include mobile {
         margin-left: 0;
@@ -361,11 +366,12 @@
         padding: 0 1em;
         padding-right: 0.5em;
         border: 1px solid $color-border-light;
-        position: relative;
         display: inline-table;
+        position: absolute;
 
         @supports (display: inline-grid) {
             display: inline-flex;
+            position: relative;
         }
 
         @include mobile {
